Revision history for Music-ToRoman

{{$NEXT}}
    - Improve documentation slightly.

0.0902 2019-09-01 06:46:30
    - Improve documentation.
    - Clean-up code slightly.

0.0901 2019-02-21 11:57:48
    - Don't insert a space before a maj/min decorator.

0.0900 2019-02-20 20:56:20
    - Allow parsing of non-scale notes in the bass (ex: "iii9/bii").

0.0802 2019-02-20 20:28:18
    - Improve documentation.
    - Add to and reorganize tests.

0.0801 2019-02-19 23:19:37
    - Improve documentation.

0.0800 2019-02-19 21:23:30
    - Clean up code and tests.
    - Allow diminished chords with "dim" in the name.
    - Allow chord inputs like "AMaj7" and "Bmin7."

0.0701 2018-11-18 15:52:45
    - Restrict the note regex to [A-G] (instead of \w).
    - Improve documentation.

0.0700 2018-11-07 14:28:18
    - Default to major/ionian when the chords attribute is off.

0.0600 2018-11-06 17:44:07
    - Band-aid note-in-bass logic.

0.0501 2018-11-06 11:55:41
    - Improve documentation.
    - Fix-up test cases.

0.0500 2018-11-06 08:53:03
    - Fix ABSTRACT.
    - Improve documentation ever so slightly.
    - Capture accidentals in e.g. "chord/note#" type constructions.

0.0400 2018-11-05 17:17:33
    - Support diatonic modes when chords => 0.
    - Improve documentation.

0.0300 2018-11-04 23:15:29
    - Adjust major/minor scale logic.

0.0200 2018-11-04 21:06:31
    - Allow chords with notes in the bass (e.g. "Cm9/G").

0.0101 2018-11-04 20:27:14
    - Improve documentation.
    - Add a test!

0.0100 2018-11-04 20:07:56
    - Mint by Dist::Zilla.
    - Port from eg scripts in Music::BachChoralHarmony.