@@ -2,6 +2,7 @@ Revision history for Music-ToRoman
 
 {{$NEXT}}
     - Improve documentation slightly.
+    - Add isa attribute constraints and a no-chord parse error.
 
 0.0902 2019-09-01 06:46:30
     - Improve documentation.
